# Django_Rest_API_Tutorial

./: .gitignore  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  pyproject.toml
snippets/: admin.py  apis.py  models.py  serializers.py  tests.py  urls.py  views.py
snippets/apis/: api_view.py  generic.py  mixins.py  viewsets.py
snippets/migrations/: 0001_initial.py  0002_snippet_author.py
tutorial/: settings.py  urls.py
tutorial/quickstart/: views.py
